--- a/.github/workflows/build_A15-Carl.yml
+++ b/.github/workflows/build_A15-Carl.yml
@@ -6,7 +6,8 @@ env:
   FEIL: 'oppo+oplus+realme'
   ANDROID_VERSION: 'android14'
   KERNEL_VERSION: '6.1'
-  KERNEL_NAME: 'android14-11-o-g6567d1f5c5e2'  #ace5
+  # KERNEL_NAME: 'android14-11-o-g6567d1f5c5e2'  #ace5 6.1.118
+  KERNEL_NAME: 'android14-11-o-g239209decfd3'  #ace5 6.1.75
   #KERNEL_NAME: 'android14-11-o-gb3c173388f97' #13R
   KERNELSU_VARIANT: 'SukiSU-Ultra'
   KERNELSU_BRANCH: 'susfs-dev'
