--- a/.github/workflows/build_A15-Carl.yml
+++ b/.github/workflows/build_A15-Carl.yml
@@ -102,6 +102,7 @@ jobs:
     outputs:
       # ksuver: ${{ steps.ksu_version.outputs.ksuver }}
       ksuver: ${{ env.KSUVER }}
+      sourcecode: ${{ env.sourcecode }}
     steps:
       - name: 最大化建筑空间
         uses: easimon/maximize-build-space@master
