--- a/.github/workflows/build_A15-Carl.yml
+++ b/.github/workflows/build_A15-Carl.yml
@@ -258,27 +258,22 @@ jobs:
           cp ./susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ env.ANDROID_VERSION }}-${{ env.KERNEL_VERSION }}.patch ./common/
           cp ./susfs4ksu/kernel_patches/fs/* ./common/fs/
           cp ./susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
-          
+          cp ./kernel_patches/next/susfs_fix_patches/v1.5.9/* ./KernelSU-Next/
           # Apply patches
           cd ./KernelSU-Next
           if [[ "${{ github.event.inputs.SUSFS_ENABLED }}" == "true" ]]; then
               echo "Applying SUSFS patches for KernelSU Next..."
 
-              patch -p1 --forward --fuzz=3 < 10_enable_susfs_for_ksu.patch || true
-           
-              cp ../../kernel_patches/next/susfs_fix_patches/v1.5.9/fix_apk_sign.c.patch ./
-              patch -p1 --forward --fuzz=3 < fix_apk_sign.c.patch
-              
-              cp ../../kernel_patches/next/susfs_fix_patches/v1.5.9/fix_core_hook.c.patch ./
+              patch -p1 --forward --fuzz=3 < 10_enable_susfs_for_ksu.patch || true           
+
+              patch -p1 --forward --fuzz=3 < fix_apk_sign.c.patch              
+
               patch -p1 --forward --fuzz=3 < fix_core_hook.c.patch
               
-              cp ../../kernel_patches/next/susfs_fix_patches/v1.5.9/fix_selinux.c.patch ./
-              patch -p1 --forward --fuzz=3 < fix_selinux.c.patch
-              
-              cp ../../kernel_patches/next/susfs_fix_patches/v1.5.9/fix_ksud.c.patch ./
+              patch -p1 --forward --fuzz=3 < fix_selinux.c.patch              
+
               patch -p1 --forward --fuzz=3 < fix_ksud.c.patch
 
-              cp ../../kernel_patches/next/susfs_fix_patches/v1.5.9/fix_rules.c.patch ./
               patch -p1 --forward --fuzz=3 < fix_rules.c.patch              
 
               cd ../common
