--- a/.github/workflows/build_A15-Carl.yml
+++ b/.github/workflows/build_A15-Carl.yml
@@ -258,7 +258,9 @@ jobs:
           cp ./susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ env.ANDROID_VERSION }}-${{ env.KERNEL_VERSION }}.patch ./common/
           cp ./susfs4ksu/kernel_patches/fs/* ./common/fs/
           cp ./susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
-          cp ./kernel_patches/next/susfs_fix_patches/v1.5.9/* ./KernelSU-Next/
+          #cp ./kernel_patches/next/susfs_fix_patches/v1.5.9/* ./KernelSU-Next/
+          cp ./kernel_patches/next/0001-kernel-implement-susfs-v1.5.5-v1.5.7-KSUN-v1.0.8.patch ./KernelSU-Next/
+
           # Apply patches
           cd ./KernelSU-Next
           if [[ "${{ github.event.inputs.SUSFS_ENABLED }}" == "true" ]]; then
@@ -276,23 +278,29 @@ jobs:
 
               # patch -p1 --forward --fuzz=3 < fix_rules.c.patch              
 
-              cp ../oppo_oplus_realme_sm8650/patches/0001-kernel-patch-susfs-v1.5.7-to-KernelSU-Next-v1.0.7.patch ./
-              patch -p1 --forward --fuzz=3 < 0001-kernel-patch-susfs-v1.5.7-to-KernelSU-Next-v1.0.7.patch || true
-
+              # cp ../oppo_oplus_realme_sm8650/patches/0001-kernel-patch-susfs-v1.5.7-to-KernelSU-Next-v1.0.7.patch ./
+              # patch -p1 --forward --fuzz=3 < 0001-kernel-implement-susfs-v1.5.5-v1.5.7-KSUN-v1.0.8.patch || true
+              patch -p1 --forward < ksun_susfs_latest.patch || true
               cd ../common
+
+
               patch -p1 < 50_add_susfs_in_gki-${{ env.ANDROID_VERSION }}-${{ env.KERNEL_VERSION }}.patch || true
+              
+
+          fi     
               
               # Replace next_hooks.patch with syscall_hooks.patch
               # cp ../kernel_patches/next/syscall_hooks.patch ./
               # patch -p1 -F 3 < syscall_hooks.patch
-              
+
+
               cp ../kernel_patches/next/scope_min_manual_hooks_v1.4.patch ./
               patch -p1 -F 3 < scope_min_manual_hooks_v1.4.patch
                 
               cp ../kernel_patches/69_hide_stuff.patch ./
               patch -p1 -F 3 < 69_hide_stuff.patch
 
-          fi
+          
 
           
       - name: 应用 lz4 patch  
